# serdes

./: .gitignore  BUILD.md  LICENSE  README.md  meson.build
Demo/: meson.build
Demo/Basic/: main.cpp
Demo/Constexpr/: main.cpp
Demo/HelloWorld/: main.cpp
Demo/JsonArray/: main.cpp
Include/Serdes/: Serdes.hpp
Include/Serdes/Core/: Api.hpp  Array.hpp  Assoc.hpp  Concepts.hpp  Const.hpp  Custom.hpp  Default.hpp  Exception.hpp  Helpers.hpp  Math.hpp  Pod.hpp  Pointer.hpp  Range.hpp  Reference.hpp  Sequence.hpp  String.hpp  Struct.hpp  Tuple.hpp  Typedefs.hpp  Typeids.hpp  Variant.hpp  Void.hpp
